--- a/client/question.jade
+++ b/client/question.jade
@@ -1,40 +1,41 @@
 template(name='question')
-    .ui.segment
-        a.ui.header.select_question(href="/question/#{_id}/view") #{title}
-        .ui.list 
-            .item #{views} views
-            .item 
-                i.user.outline.icon
-                |#{_author.username}
-            .item 
-                |bounty: 
-                |#{bounty}pts
-            .item 
-                |bounty: 
-                |#{bounty_total}pts
-            .item 
-                each tags 
-                    .ui.label #{this}
-        .ui.big.circular.icon.compact.button.vote_true(class=vote_true_class)
-            i.thumbs.up.icon(class=vote_true_icon_class)
-        .ui.big.circular.icon.compact.button.vote_false(class=vote_false_class)
-            i.thumbs.down.icon(class=vote_false_icon_class)
-        if can_edit
-            +session_key_value_edit key='edit_question_id' value=_id label='edit'
-        if session_key_value_is 'edit_question_id' _id
-            .ui.inline.header editing
-            +text_edit key='title' direct=true
-            +number_edit key='bounty' direct=true
-            +session_key_value_edit key='edit_question_id' value=null label='save'
-            +number_edit key='bounty_total' label='total bounty' direct=true
-            // +key_value_edit key='question_type' value='true_false' label='true/false'
-            // +key_value_edit key='question_type' value='multiple_choice' label='multiple choice'
-            // if key_value_is 'question_type' 'multiple_choice'
-            //     // +number_edit key='answer_count' label='number of answers' direct=true
-            //     // each answers
-            //     +text_edit key='answer_choice_one' label='answer choice one' direct=true
-            //     +text_edit key='answer_choice_two' label='answer choice two' direct=true
-
+    .ui.card
+        .content
+            a.ui.header.select_question(href="/question/#{_id}/view") #{title}
+            .ui.list 
+                .item #{views} views
+                .item 
+                    i.user.outline.icon
+                    |#{_author.username}
+                .item 
+                    |bounty: 
+                    |#{bounty}pts
+                .item 
+                    |bounty: 
+                    |#{bounty_total}pts
+                .item 
+                    each tags 
+                        .ui.label #{this}
+            .ui.big.circular.icon.compact.button.vote_true(class=vote_true_class)
+                i.thumbs.up.icon(class=vote_true_icon_class)
+            .ui.big.circular.icon.compact.button.vote_false(class=vote_false_class)
+                i.thumbs.down.icon(class=vote_false_icon_class)
+            if can_edit
+                +session_key_value_edit key='edit_question_id' value=_id label='edit'
+            if session_key_value_is 'edit_question_id' _id
+                .ui.inline.header editing
+                +text_edit key='title' direct=true
+                +number_edit key='bounty' direct=true
+                +session_key_value_edit key='edit_question_id' value=null label='save'
+                +number_edit key='bounty_total' label='total bounty' direct=true
+                // +key_value_edit key='question_type' value='true_false' label='true/false'
+                // +key_value_edit key='question_type' value='multiple_choice' label='multiple choice'
+                // if key_value_is 'question_type' 'multiple_choice'
+                //     // +number_edit key='answer_count' label='number of answers' direct=true
+                //     // each answers
+                //     +text_edit key='answer_choice_one' label='answer choice one' direct=true
+                //     +text_edit key='answer_choice_two' label='answer choice two' direct=true
+    
 
 template(name='question_card')
     .ui.stackable.grid
@@ -99,39 +100,6 @@ template(name='question_card')
         // .ui.divider
     
 
-template(name='question_edit')
-    with current_doc
-        .ui.stackable.padded.grid
-            .row 
-                .eight.wide.column
-                    a.ui.icon.circular.large.button(href="/question/#{_id}/view" title='save' class='invert')
-                        i.checkmark.big.icon
-                    .ui.inline.large.header 
-                        small edit question
-                        // |#{title}
-                    div
-                    +text_edit key='title' label='title' direct=true
-                    div
-                    .ui.header #{dependency_ids}
-                    +image_edit key='image_id' label='image' direct=true
-                    div
-                    +link_edit key='link' label='link' direct=true
-                    +date_edit key='date' label='date' direct=true
-                    +number_edit key='bounty_total' label='total bounty' direct=true
-                    div
-                    +boolean_edit key='has_recipient' label='has recipient' direct=true
-                    // if has_recipient
-                    +single_user_edit key='recipient_id' key2='recipient_username' label='recipient' direct=true
-                    +number_edit key='point_amount' label='point amount' direct=true
-                .eight.wide.column
-                    |tag = -1p
-                    +smart_tagger
-                    +textarea_edit key='body' label='body' direct=true
-                    if description
-                        +html_edit key='description' label='description' direct=true
-                    +youtube_edit key='youtube_id' label='youtube id' direct=true
-                    i.remove.link.circular.big.icon.delete_question(title='delete question')
-                    
                     
 template(name='question_view')
     with current_doc
@@ -153,15 +121,7 @@ template(name='question_view')
                         if youtube_id
                             +youtube_view key='youtube_id' direct=true
                         .f12
-                            if tone
-                                +tone
-                            else if key_value_is 'model' 'reddit'
-                                |{{nl2br body}}
-                                // |!{body}
-                            else
-                                |!{description}
-                        // +watson_view
-                        // if is_admin
+                            |!{description}
                         +viewing
                     +comments
                     .ui.button.add_answer
@@ -182,25 +142,34 @@ template(name='question_view')
                         a.ui.circular.icon.big.button.edit_question(href="/question/#{_id}/edit")
                             i.large.pencil.icon
                     +vote
-                    .ui.header dependants
+                    .ui.inline.header 
+                        i.fork.icon
+                        |dependencies
                     .ui.button.add_dependency
                         i.plus.icon
-                    .ui.header dependencies
-                    .ui.button.add_dependency
-                        i.plus.icon
-                        |new dependency
+                        |add dependency
                     // .ui.button.connect_existing
                     //     i.fork.icon
                     //     |connect existing
-                    each dependencies
-                        a.ui.small.header(href="/question/#{_id}/view") #{title}
                     div
+                    .ui.selection.link.list
+                        each dependencies
+                            a.item(href="/question/#{_id}/view") #{title}
+                    div
+                    .ui.inline.header 
+                        i.fork.icon
+                        |#{dependents.length}
+                        |dependants
+                    .ui.icon.button.add_dependent
+                        i.plus.icon
+                    div
+                    .ui.selection.link.list
+                        each dependents
+                            a.item(href="/question/#{_id}/view") #{title}
                     .ui.inline.small.grey.header #{when}
                     .ui.label #{views} views
                     |#{tags.length}
-                    +array_edit key='tags' direct=true
-                    each tags 
-                        .ui.label #{this}
+                    +array_view key='tags' direct=true
                     if dev
                         +print_this
                     +author_block
