--- a/client/fields.jade
+++ b/client/fields.jade
@@ -453,7 +453,7 @@ template(name='text_edit')
         else if key
             |#{key}
             //- +clear_value
-    .ui.icon.input
+    .ui.input(class=input_class)
         input.edit_text(type='text' value=field_value placeholder=placeholder autocomplete="off")
         
 
